--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -62,7 +62,9 @@ jobs:
   trigger-dokploy:
     name: Trigger Dokploy
     runs-on: ubuntu-latest
+    needs: migrate-database
 
     steps:
       - name: Trigger deploy on Dokploy
         run: curl -X POST ${{ secrets.DOKPLOY_WEBHOOK }}
+
