--- a/.github/workflows/deploy-to-production.yml
+++ b/.github/workflows/deploy-to-production.yml
@@ -26,7 +26,7 @@ jobs:
 
   migrate-database:
     name: Migrate Database
-    runs-on: self-hosted
+    runs-on: generic-runner
     needs: build-and-push
 
     steps:
