--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ POSTGRES_PORT=5432
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
 
 # APP
-PORT=5000
+PORT=4000
 
 # CORS
 CORS_ORIGIN=http://localhost
@@ -18,3 +18,26 @@ REDIS_PORT=6382
 REDIS_PASSWORD=''
 REDIS_DB=0
 
+# MinIO
+MINIO_ROOT_USER=phamarcy
+MINIO_ROOT_PASSWORD=phamarcy
+MINIO_PORT=9000
+
+# JWT
+JWT_SECRET=97918554-8def-4e92-bd96-ed62e5423519
+
+JWT_ACESS_EXPIRATION=1d
+JWT_PASSWORD_CHANGE_EXPIRATION=30m
+JWT_EMAIL_CONFIRMATION_EXPIRATION=5h
+JWT_EMAIL_INVITATION_EXPIRATION=5h
+
+# Refresh Token
+JWT_REFRESH_EXPIRATION=1d
+
+# Cookies
+COOKIE_DOMAIN=localhost
+# true in production - somente em https
+COOKIE_SECURE=false
+COOKIE_EXPIRATION=8d
+COOKIE_SECRET=9898902c-2c89-4481-ab24-0145cfb8832b
+COOKIE_NAME_PREFIX=app
