FIX: FIX .env config | docker-composer

--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,7 @@ REDIS_DB=0
 MINIO_ROOT_USER=phamarcy
 MINIO_ROOT_PASSWORD=phamarcy
 MINIO_PORT=9000
+MINIO_WEB_PORT=9001
 
 # JWT
 JWT_SECRET=97918554-8def-4e92-bd96-ed62e5423519
