--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - backend-network
 
   redis:
-    image: redis/redis-stack-server:7.4.0-v0
+    image: redis/redis-stack-server:latest
     ports:
       - "${REDIS_PORT}:6379"
     volumes:
@@ -28,7 +28,7 @@ services:
     command: server /data --console-address ":9001"
     ports:
       - "${MINIO_PORT}:9000"
-      - "${REDIS_WEB_PORT}:9001"
+      - "${MINIO_WEB_PORT}:9001"
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
