--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "telejson": "^8.0.0"
   },
   "devDependencies": {
