FIX: filial-config i  app.modules

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,7 @@ MINIO_WEB_PORT=9001
 # JWT
 JWT_SECRET=97918554-8def-4e92-bd96-ed62e5423519
 
-JWT_ACESS_EXPIRATION=1d
+JWT_ACCESS_EXPIRATION=1d
 JWT_PASSWORD_CHANGE_EXPIRATION=30m
 JWT_EMAIL_CONFIRMATION_EXPIRATION=5h
 JWT_EMAIL_INVITATION_EXPIRATION=5h
